Fixed CSS issue in buttons alignment and added worker.js
buttons was sticked to timeline.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -428,12 +428,11 @@ header .social li {
 }
 #main .top .controls {
     display: block;
-    float: left;
     width: 100%;
     bottom: 0;
     left: 0;
     color: #999;
-    padding: 4px 20px;
+    padding: 4px 20px 10px 20px;
     text-shadow: 0 1px 0 rgba(0,0,0,0.5);
     border-top: 1px solid #111;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
@@ -445,6 +444,7 @@ header .social li {
     background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
     background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
     background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
+    overflow: hidden;
 }
 #main .top .controls a {
     padding: 8px 10px 0 0;
@@ -624,7 +624,6 @@ body.drag #dropArea h2 span { border-color: #4a4; }
 }
 #results {
     text-align: center;
-    padding: 10px;
 }
 
 /*************************************************************/
